--- a/src/Components/Hero2.css
+++ b/src/Components/Hero2.css
@@ -498,10 +498,7 @@
     position: relative;
     left: -28rem;
 }
-.h3-Poster2-Heading h1{
-  font-size: 3rem !important;
-margin-left: 6rem  !important;
-}
+
 
 .h3-reviews p{
  margin-top: 0.5rem;
